--- a/MLP.ipynb
+++ b/MLP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "0c76dcbb",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 77,
    "id": "e4dda520",
    "metadata": {},
    "outputs": [],
@@ -98,38 +98,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 82,
    "id": "1867f3e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mlp = MLP([2,3,1])\n",
+    "inputs = np.array([[0,0],[1,0],[0,1],[1,1]])\n",
+    "targets = np.array([0,0,0,1])\n",
+    "\n",
+    "for _ in range(1000):\n",
+    "    for inp, target in zip(inputs, targets):\n",
+    "        inp = inp.reshape(-1,1)\n",
+    "        activations = mlp.forward_pass(inp)\n",
+    "        mlp.backward_pass(target, 0.1)\n",
+    "\n",
+    "# mlp.get_weights()\n",
+    "# mlp.get_activations()\n",
+    "# mlp.get_z_values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "cbaadfd0",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.98401115]]\n"
+      "For input [0 0]: 0.00\n",
+      "For input [1 0]: 0.01\n",
+      "For input [0 1]: 0.01\n",
+      "For input [1 1]: 0.98\n"
      ]
     }
    ],
    "source": [
-    "mlp = MLP([2,3,1])\n",
-    "inp = np.array([1,0]).reshape(-1,1)\n",
-    "target = np.array([1])\n",
-    "\n",
-    "for _ in range(200):\n",
+    "for inp in inputs:\n",
+    "    inp = inp.reshape(-1,1)\n",
     "    activations = mlp.forward_pass(inp)\n",
-    "    mlp.backward_pass(target, 0.1)\n",
-    "\n",
-    "# mlp.get_weights()\n",
-    "# mlp.get_activations()\n",
-    "# mlp.get_z_values()\n",
-    "output = activations[-1]\n",
-    "print(output)"
+    "    activations = mlp.forward_pass(inp)\n",
+    "    output = activations[-1]\n",
+    "    print(f'For input {inp.reshape(1,-1)[0]}: {output[0][0]:.2f}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b03e8bd2",
+   "id": "a635efca",
    "metadata": {},
    "outputs": [],
    "source": []
